PathFindingVisualizer/src/app/app.component.scss
.small-margin-left {
    margin-left: 2px;
}
.small-margin-right {
    margin-right: 2px;
}
.small-margin-sides {
    margin-right: 2px;
    margin-left: 2px;
}

mat-toolbar {
    min-height: 80px;
    max-height: 80px;

    mat-icon {
        margin: 0 10px 0 10px;
    }
    mat-slide-toggle {
        margin-left: -5px;
        margin-right: -5px;
    }

    span {
        font-size: 1.5em;
        font-weight: bolder;
    }

    .flex-stretch {
        flex: 1 0 auto;
    }
}

.content {
    padding: 16px;
    min-height: 90vh;

    .overview-container {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: center;
    }
}

